--- a/angular.json
+++ b/angular.json
@@ -25,7 +25,7 @@
             ],
             "stylePreprocessorOptions": {
               "includePaths": [
-                "src/app/view"
+                "src/app/common"
               ]
             },
             "scripts": []
