--- a/backend-springboot/build.gradle
+++ b/backend-springboot/build.gradle
@@ -15,13 +15,13 @@ apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 
 group = 'com.mommoo.web.mommoo-portfolio'
-version = '1.0'
+archivesBaseName = 'mommoo-portfolio' //name of jar
+version = '1.1.2' //version of jar
 sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
 }
-
 
 dependencies {
     implementation('org.springframework.boot:spring-boot-starter')
