--- a/backend-springboot/src/main/resources/application.test.properties
+++ b/backend-springboot/src/main/resources/application.test.properties
@@ -12,6 +12,6 @@ spring.data.mongodb.uri=mongodb://localhost:27017
 spring.data.mongodb.database=test_database
 
 ## Mommoo Config
-
+domain.path=http://localhost:8080
 resource.assets-directory-name=assets
 resource.assets.image-directory-name= images
