## BugFix: fix that the banner image of project page overlap another ui.
## Config: append production's build option
 - set base-href.

--- a/frontend-angular/angular.json
+++ b/frontend-angular/angular.json
@@ -48,7 +48,8 @@
               "aot": true,
               "extractLicenses": true,
               "vendorChunk": false,
-              "buildOptimizer": true
+              "buildOptimizer": true,
+              "baseHref": "/mommoo-portfolio/"
             }
           }
         },
