## Mommoo-Portfolio v2.1.0 Release.  - removing project card wide property  - removing div's backface-visibility property (mobile text hidden issue)  - complete all of pdf file setting

--- a/backend-springboot/src/main/resources/application.test.properties
+++ b/backend-springboot/src/main/resources/application.test.properties
@@ -12,4 +12,4 @@ spring.data.mongodb.uri=mongodb://localhost:27017
 spring.data.mongodb.database=test_database
 
 ## Mommoo Config
-domain.path=http://localhost:8080
+resource.domain.path=http://localhost:8080
